Removed static valueOf methods in favor of Convert.